--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'dev.falsehonesty'
-version '0.1.2'
+version '0.1.3'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-      Added support for Kotlin files."""
+      Change Vendor URL."""
 }
 publishPlugin {
     token intellijPublishToken
