--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '201.6487.11-EAP-SNAPSHOT'
-    plugins 'java'
+    plugins 'java', 'org.jetbrains.kotlin:1.3.71-release-IJ2020.1-1'
 }
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
