Added code folding regions to preprocessor directive blocks

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,8 +17,10 @@
         <!-- Add your extensions here -->
         <highlightVisitor implementation="dev.falsehonesty.PreprocessorHighlightVisitor" />
         <enterHandlerDelegate implementation="dev.falsehonesty.EnterHandler" order="first"/>
-        <lang.importOptimizer language="JAVA" implementationClass="dev.falsehonesty.ImportOptimizer" order="first"/>
+        <lang.importOptimizer language="JAVA" implementationClass="dev.falsehonesty.JavaImportOptimizer" order="first"/>
         <defaultLiveTemplates file="/liveTemplates/Preprocessor.xml" />
+        <lang.foldingBuilder language="JAVA" implementationClass="dev.falsehonesty.PreprocessorFoldingBuilder" order="first"/>
+        <lang.foldingBuilder language="kotlin" implementationClass="dev.falsehonesty.PreprocessorFoldingBuilder" order="first"/>
 
         <!-- TODO: Figure out a way to do this without it interfering with live templates -->
         <!-- <completion.contributor language="any" implementationClass="dev.falsehonesty.PreprocessorCompletion" /> -->
