--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'dev.falsehonesty'
-version '0.1.3'
+version '0.2.0'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,8 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-      Change Vendor URL."""
+      Implemented code folding regions for preprocessor directive blocks.
+      Also added a default live template (pif) to insert a preprocessor if/else block."""
 }
 publishPlugin {
     token intellijPublishToken
