--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'dev.falsehonesty'
-version '0.2.2'
+version '0.3.0'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,10 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-      Updated plugin to be compatible with IntelliJ IDEA 2020.2"""
+      Fix highlighting for conditions such as `//#if     VAR_1   >    VAR_2  &&  VAR_3< VAR_4`
+      Added support for equality expressions (`==` and `!=`)
+      
+      Thank you @JasonHK so much for these changes :)"""
     // please see https://jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description
     sinceBuild "201.6487"
 }
