--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'dev.falsehonesty'
-version '0.4.0'
+version '0.5.0'
 
 repositories {
     mavenCentral()
@@ -29,8 +29,8 @@ compileTestKotlin {
 }
 patchPluginXml {
     changeNotes """
-      Implemented support for C-style if directives
-      Highlighting for //#if FABRIC or //#if MC>11502 && FORGE now are supported!"""
+      Implemented support for elseif directives
+      Highlighting for //#elseif FABRIC and //#elseif MC>10809 is now supported!!"""
     // please see https://jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description
     sinceBuild "201.6487"
 }
