--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>dev.falsehonesty.intellij-preprocessor</id>
     <name>Preprocessor Support</name>
-    <vendor email="falsehonesty@sk1er.club" url="https://chattriggers.com">FalseHonesty</vendor>
+    <vendor email="thefalsehonesty@gmail.com" url="https://chattriggers.com">FalseHonesty</vendor>
 
     <description><![CDATA[
     An IntelliJ plugin to add support for comment-based
